capsules/spectral-bridge/tests/ui/interpretation_cannot_dispatch.stderr
error[E0308]: mismatched types
  --> tests/ui/interpretation_cannot_dispatch.rs:12:41
   |
12 |     let _ = dispatch_semantic_microdose(interpretation, tx);
   |             --------------------------- ^^^^^^^^^^^^^^ expected `LiveExecutable<SemanticMicrodose>`, found `AstridInterpretationV1`
   |             |
   |             arguments to this function are incorrect
   |
   = note: expected struct `LiveExecutable<SemanticMicrodose>`
              found struct `AstridInterpretationV1`
note: function defined here
  --> src/authority_types.rs
   |
   | pub fn dispatch_semantic_microdose(
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^
